* Fix for "Log4Shell" RCE 0-day exploit in log4j https://nvd.nist.gov/vuln/detail/CVE-2021-44228[CVE-2021-44228] - {pull}2332[#2332]

[float]
===== Features
* Added support to selectively enable instrumentations - {pull}2292[#2292]

[float]
===== Bug fixes
* Preferring controller names for Spring MVC transactions, `use_path_as_transaction_name` only as a fallback - {pull}2320[#2320]

[[release-notes-1.28.0]]
==== 1.28.0 - 2021/12/07

[float]
===== Features
* Adding experimental support for <<aws-lambda, AWS Lambda>> - {pull}1951[#1951]
* Now supporting tomcat 10 - {pull}2229[#2229]

[float]
===== Bug fixes
* Fix error with parsing APM Server version for 7.16+ - {pull}2313[#2313]

[[release-notes-1.27.1]]
==== 1.27.1 - 2021/11/30

[float]
===== Security
* Resolves Local Privilege Escalation issue https://discuss.elastic.co/t/apm-java-agent-security-update/291355[ESA-2021-30] https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-37942[CVE-2021-37942]

[float]
===== Features
* Add support to Jakarta EE for JSF - {pull}2254[#2254]

[float]
===== Bug fixes
* Fixing missing Micrometer metrics in Spring boot due to premature initialization - {pull}2255[#2255]
* Fixing hostname trimming of FQDN too aggressive - {pull}2286[#2286]
* Fixing agent `unknown` version - {pull}2289[#2289]
* Improve runtime attach configuration reliability - {pull}2283[#2283]

[[release-notes-1.27.0]]
==== 1.27.0 - 2021/11/15

[float]
===== Security
* Resolves Local Privilege Escalation issue https://discuss.elastic.co/t/apm-java-agent-security-update/289627[ESA-2021-29] https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-37941[CVE-2021-37941]

[float]
===== Potentially breaking changes
* `transaction_ignore_urls` now relies on full request URL path - {pull}2146[#2146]
** On a typical application server like Tomcat, deploying an `app.war` application to the non-ROOT context makes it accessible with `http://localhost:8080/app/`