@@ -46,6 +46,7 @@ endif::[]
 [float]
 ===== Bug fixes
 * Preferring controller names for Spring MVC transactions, `use_path_as_transaction_name` only as a fallback - {pull}2320[#2320]
+* Fixing log4j configuration error - {pull}2343[#2343]
 
 [[release-notes-1.28.0]]
 ==== 1.28.0 - 2021/12/07
